--- a/adp-bkd/index.html
+++ b/adp-bkd/index.html
@@ -11,7 +11,7 @@
 		* { margin: 0; padding: 0; }
 		
 		html { 
-			background: url(https://7d591c3ab3953755bd3a54d5684000e062bf8467.googledrive.com/host/0B3Foijwbp997YThueVF1LXFqd00) no-repeat center center fixed; 
+			background: url(https://github.com/Eperlanop/eperlanop.github.io/blob/master/adp-bkd/1.JPG) no-repeat center center fixed; 
 			-webkit-background-size: cover;
 			-moz-background-size: cover;
 			-o-background-size: cover;
