--- a/adp-bkd/index.html
+++ b/adp-bkd/index.html
@@ -11,7 +11,7 @@
 		* { margin: 0; padding: 0; }
 		
 		html { 
-			background: url(eperlanop.github.io/adp-bkd/2.jfif) no-repeat center center fixed; 
+			background: url(http://eperlanop.github.io/adp-bkd/2.jfif) no-repeat center center fixed; 
 			-webkit-background-size: cover;
 			-moz-background-size: cover;
 			-o-background-size: cover;
