--- a/web-prim/buttons/index.html
+++ b/web-prim/buttons/index.html
@@ -8,7 +8,7 @@
 <body>
 <div style="text-align: center">
 <h1 >Создание CSS кнопок со встроенными значками</h1>
-<a href="eperlanop.github.io/web-prim/buttons/" class="buttons whitestar" style="background: pink;">Посмотреть на GitHub</a>
+<a href="https://github.com/Eperlanop/eperlanop.github.io/tree/master/web-prim/buttons" class="buttons whitestar" style="background: pink;">Посмотреть на GitHub</a>
 </div>
 <div style="text-align: justify">
 <div>
