--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<html>
+    <head>
+        <meta charset="utf-8">
+         <link rel="stylesheet" href="/css/style.css">
+</head>
+    <body>
 <div class="outer">
 
     <div class="frame-backside"></div>
@@ -40,3 +46,5 @@
     </div>
 
   </div>
+        <body>
+            </html>
